# htmx-text

./: pyproject.toml
htmx_test/: __init__.py
htmx_test/static/: style.css
htmx_test/templates/: index.html.j2  login.html.j2  todo_container.html.j2
