[tool.poetry]
name = "htmx-test"
version = "0.1.0"
description = ""
authors = ["kvwu <kvwu@transienterror.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
